// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Idp Identity Unit Tests Defaults 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DefaultsAmazon94FE7179": Object {
      "Properties": Object {
        "ProviderDetails": Object {
          "authorize_scopes": "profile",
          "client_id": "123",
          "client_secret": "123",
        },
        "ProviderName": "LoginWithAmazon",
        "ProviderType": "LoginWithAmazon",
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "DefaultsApple276139FA": Object {
      "Properties": Object {
        "ProviderDetails": Object {
          "authorize_scopes": "name",
          "client_id": "123",
          "key_id": "dfds",
          "private_key": "dsds",
          "team_id": "dsds",
        },
        "ProviderName": "SignInWithApple",
        "ProviderType": "SignInWithApple",
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "DefaultsFacebook8D3F62BE": Object {
      "Properties": Object {
        "ProviderDetails": Object {
          "authorize_scopes": "public_profile",
          "client_id": "123",
          "client_secret": "123",
        },
        "ProviderName": "Facebook",
        "ProviderType": "Facebook",
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "DefaultsGoogle99F39624": Object {
      "Properties": Object {
        "ProviderDetails": Object {
          "authorize_scopes": "profile",
          "client_id": "123",
          "client_secret": "123",
        },
        "ProviderName": "Google",
        "ProviderType": "Google",
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "DefaultsIdentityPoolAuthenticatedRole69EA113E": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsIdentityPoolBA85B5EA": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "DefaultsUserPoolWebClient89951652",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "DefaultsUserPool8771AC2E",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsIdentityPoolDefaultRoleAttachment961DF578": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsIdentityPoolBA85B5EA",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolAuthenticatedRole69EA113E",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolUnauthenticatedRole863CFE8C",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsIdentityPoolUnauthenticatedRole863CFE8C": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsOidcB2C7D801": Object {
      "Properties": Object {
        "ProviderDetails": Object {
          "attributes_request_method": "GET",
          "authorize_scopes": "openid",
          "client_id": "123",
          "client_secret": "123",
          "oidc_issuer": "ddsds",
        },
        "ProviderName": "DefaultsOidcE7D2E46C",
        "ProviderType": "OIDC",
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "DefaultsSamlFE4B64C3": Object {
      "Properties": Object {
        "ProviderDetails": Object {
          "IDPSignout": false,
          "MetadataURL": "123",
        },
        "ProviderName": "DefaultsSaml876BB07A",
        "ProviderType": "SAML",
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "DefaultsUserPool8771AC2E": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "AutoVerifiedAttributes": Array [
          "email",
        ],
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "EnabledMfas": Array [
          "SMS_MFA",
        ],
        "MfaConfiguration": "ON",
        "Policies": Object {
          "PasswordPolicy": Object {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
            "TemporaryPasswordValidityDays": 3,
          },
        },
        "SmsConfiguration": Object {
          "ExternalId": "DefaultsUserPool4C3A90C6",
          "SnsCallerArn": Object {
            "Fn::GetAtt": Array [
              "DefaultsUserPoolsmsRoleE0CA6B10",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolAddOns": Object {
          "AdvancedSecurityMode": "ENFORCED",
        },
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "DefaultsUserPoolWebClient89951652": Object {
      "DependsOn": Array [
        "DefaultsAmazon94FE7179",
        "DefaultsApple276139FA",
        "DefaultsFacebook8D3F62BE",
        "DefaultsGoogle99F39624",
        "DefaultsOidcB2C7D801",
        "DefaultsSamlFE4B64C3",
      ],
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "DefaultsUserPoolsmsRoleE0CA6B10": Object {
      "Metadata": Object {
        "cdk_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "applies_to": Array [
                "Resource::*",
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "MFA requires sending a text to a users phone number which cannot be known at deployment time.",
            },
          ],
        },
      },
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:ExternalId": "DefaultsUserPool4C3A90C6",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Service": "cognito-idp.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "sns:Publish",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "sns-publish",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`User Identity Unit Tests Defaults - Nested 1`] = `
Object {
  "Resources": Object {
    "DefaultsNestedIdentityPool73A8A64B": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "DefaultsNestedUserPoolWebClient15C5E297",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "DefaultsNestedUserPool567C619B",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsNestedIdentityPoolAuthenticatedRoleA6E986E9": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsNestedIdentityPool73A8A64B",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsNestedIdentityPool73A8A64B",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsNestedIdentityPoolDefaultRoleAttachment5574AB70": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsNestedIdentityPool73A8A64B",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsNestedIdentityPoolAuthenticatedRoleA6E986E9",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsNestedIdentityPoolUnauthenticatedRole28BCB3F0",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsNestedIdentityPoolUnauthenticatedRole28BCB3F0": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsNestedIdentityPool73A8A64B",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsNestedIdentityPool73A8A64B",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsNestedUserPool567C619B": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "AutoVerifiedAttributes": Array [
          "email",
        ],
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "EnabledMfas": Array [
          "SMS_MFA",
        ],
        "MfaConfiguration": "ON",
        "Policies": Object {
          "PasswordPolicy": Object {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
            "TemporaryPasswordValidityDays": 3,
          },
        },
        "SmsConfiguration": Object {
          "ExternalId": "NestedStackDefaultsNestedUserPoolF08F152B",
          "SnsCallerArn": Object {
            "Fn::GetAtt": Array [
              "DefaultsNestedUserPoolsmsRole9E53925E",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolAddOns": Object {
          "AdvancedSecurityMode": "ENFORCED",
        },
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "DefaultsNestedUserPoolWebClient15C5E297": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "DefaultsNestedUserPool567C619B",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "DefaultsNestedUserPoolsmsRole9E53925E": Object {
      "Metadata": Object {
        "cdk_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "applies_to": Array [
                "Resource::*",
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "MFA requires sending a text to a users phone number which cannot be known at deployment time.",
            },
            Object {
              "applies_to": Array [
                "Resource::*",
              ],
              "id": "AwsPrototyping-IAMNoWildcardPermissions",
              "reason": "MFA requires sending a text to a users phone number which cannot be known at deployment time.",
            },
          ],
        },
      },
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:ExternalId": "NestedStackDefaultsNestedUserPoolF08F152B",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Service": "cognito-idp.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "sns:Publish",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "sns-publish",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`User Identity Unit Tests Defaults 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DefaultsIdentityPoolAuthenticatedRole69EA113E": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsIdentityPoolBA85B5EA": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "DefaultsUserPoolWebClient89951652",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "DefaultsUserPool8771AC2E",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsIdentityPoolDefaultRoleAttachment961DF578": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsIdentityPoolBA85B5EA",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolAuthenticatedRole69EA113E",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolUnauthenticatedRole863CFE8C",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsIdentityPoolUnauthenticatedRole863CFE8C": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsUserPool8771AC2E": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "AutoVerifiedAttributes": Array [
          "email",
        ],
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "EnabledMfas": Array [
          "SMS_MFA",
        ],
        "MfaConfiguration": "ON",
        "Policies": Object {
          "PasswordPolicy": Object {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
            "TemporaryPasswordValidityDays": 3,
          },
        },
        "SmsConfiguration": Object {
          "ExternalId": "DefaultsUserPool4C3A90C6",
          "SnsCallerArn": Object {
            "Fn::GetAtt": Array [
              "DefaultsUserPoolsmsRoleE0CA6B10",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolAddOns": Object {
          "AdvancedSecurityMode": "ENFORCED",
        },
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "DefaultsUserPoolWebClient89951652": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "DefaultsUserPoolsmsRoleE0CA6B10": Object {
      "Metadata": Object {
        "cdk_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "applies_to": Array [
                "Resource::*",
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "MFA requires sending a text to a users phone number which cannot be known at deployment time.",
            },
            Object {
              "applies_to": Array [
                "Resource::*",
              ],
              "id": "AwsPrototyping-IAMNoWildcardPermissions",
              "reason": "MFA requires sending a text to a users phone number which cannot be known at deployment time.",
            },
          ],
        },
      },
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:ExternalId": "DefaultsUserPool4C3A90C6",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Service": "cognito-idp.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "sns:Publish",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "sns-publish",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`User Identity Unit Tests User provided UserPool 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DefaultsIdentityPoolAuthenticatedRole69EA113E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsIdentityPoolBA85B5EA": Object {
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsIdentityPoolDefaultRoleAttachment961DF578": Object {
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsIdentityPoolBA85B5EA",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolAuthenticatedRole69EA113E",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolUnauthenticatedRole863CFE8C",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsIdentityPoolUnauthenticatedRole863CFE8C": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPool6BA7E5F2": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_phone_number",
              "Priority": 1,
            },
            Object {
              "Name": "verified_email",
              "Priority": 2,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
